--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -72,7 +72,7 @@
             <div class="row">
                 <div class="card col m4 s6 small" ng-repeat="search in output" style="margin-top:5px">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="{{search.image}}">
+                        <img style="width: 100%;height: 100%" class="activator responsive-img" ng-src="{{search.image}}">
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">{{search.name}}<i
