--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -16,8 +16,7 @@
             <div class="row">
                 <div class="center-align">
                     <h4>Search for anything</h4>
-                    <h5 style="color:#1C2C3A">Find the best place to eat, drink, shop, or visit in any city in the
-                        world.</h5>
+                    <h5 style="color:#1C2C3A">Find the best place to eat, drink, shop, or visit in any city in the world.</h5>
                 </div>
             </div>
 
@@ -40,12 +39,11 @@
                                 <label for="locality">Enter the locality *</label>
                             </div>
                             <div class="s12 m12 center-align">
-                                <button class="btn waves-effect waves-light center-align" type="submit" name="action"
+                                <button class="btn waves-effect center-align waves-yellow" type="submit" name="action"
                                         ng-click="showResult()">Search
+                                    <i class="material-icons right">send</i>
                                 </button>
-                                <i class="mdi-content-send right"></i>
                             </div>
-
                         </div>
                     </div>
                 </form>
@@ -72,20 +70,23 @@
             <div class="row">
                 <div class="card col m4 s6 small" ng-repeat="search in output" style="margin-top:5px">
                     <div class="card-image waves-effect waves-block waves-light">
-                        <img style="width: 100%;height: 100%" class="activator responsive-img" ng-src="{{search.image}}">
+                        <img style="width: 100%;height: 100%" class="activator responsive-img"
+                             ng-src="{{search.image}}">
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">{{search.name}}<i
                                 class="material-icons right">more_vert</i></span>
                     </div>
                     <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">{{search.name}}<i class="material-icons right">close</i></span>
+                            <span class="card-title grey-text text-darken-4">{{search.name}}<i
+                                    class="material-icons right">close</i></span>
 
                         <p><i style="font-size:24px" class="fa">&#xf10b;</i>{{search.contact.phone}}</p>
 
                         <p><i style="font-size:24px" class="fa">&#xf005;</i>{{search.rating}}</p>
 
-                        <p><i style="font-size:24px" class="fa fa-twitter" aria-hidden="true"></i>{{search.twitter}}</p>
+                        <p><i style="font-size:24px" class="fa fa-twitter" aria-hidden="true"></i>{{search.twitter}}
+                        </p>
                         <a ng-href="{{search.url}}"><i style="font-size:24px" class="fa fa-globe"
                                                        aria-hidden="true"></i>{{search.url}}</a>
                     </div>
