--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -88,7 +88,7 @@
                         <p><i style="font-size:24px" class="fa fa-twitter" aria-hidden="true"></i>{{search.twitter}}
                         </p>
                         <a ng-href="{{search.url}}"><i style="font-size:24px" class="fa fa-globe"
-                                                       aria-hidden="true"></i>{{search.url}}</a>
+                                                       aria-hidden="true"></i>{{search.name}}</a>
                     </div>
                 </div>
             </div>
